--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,9 +46,6 @@ jobs:
           DIFF: ${{ steps.foo.outputs.diff }}
 
       - uses: actions/github-script@v7
-        if: ${{ steps.foo.outputs.diff != 'No changes detected.' }}
-        env:
-          DIFF: ${{ steps.foo.outputs.diff }}
         with:
           github-token: ${{ github.token }}
           script: |
@@ -63,10 +60,10 @@ jobs:
             })
 
             // 2. Prepare format of the comment
-            const output = `## dstll-diff
-            <details><summary> ${{ steps.get-starting-commit.outputs.commit }}..${{ steps.get-starting-commit.outputs.commit }} -- '**.go' </summary>
+            const output = `### dstll-diff
+            <details><summary> \`${{ steps.get-starting-commit.outputs.commit }}..${{ steps.get-starting-commit.outputs.commit }} -- '**.go'\` </summary>
 
-            \`\`\`\n
+            \`\`\`diff\n
             ${{ steps.foo.outputs.diff }}
             \`\`\`
 
